# LearnDesignPattern

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Builder/: Builder.cpp  CMakeLists.txt  GroovyStyleBuilder.cpp
Builder/BuilderFacets/: CMakeLists.txt
Factory/: CMakeLists.txt  Factory.cpp  FactoryMethod.cpp
Factory/AbstarctFactory/: AbstractFactory.cpp  CMakeLists.txt
Prototype/: CMakeLists.txt  Prototype.cpp
Singleton/: CMakeLists.txt  SingletonLife.cpp
SolidDesignPrinciples/: CMakeLists.txt  LSP.cpp
SolidDesignPrinciples/LSP/: LSP.cpp
SolidDesignPrinciples/OCP/: OCP.cpp
